# openalex-mcp

./: README.md  openalex_mcp_server.py  pyproject.toml  test_server.py
