[project]
name = "openalex-mcp"
version = "0.1.0"
description = "OpenAlex MCP Server for academic paper search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.28.0",
]

[project.scripts]
openalex-mcp = "openalex_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
